test/corpus/definitions.txt
================================================================================
Empty function
================================================================================

Function myFunc
FunctionEnd

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)))

================================================================================
Function with body
================================================================================

Function .onInit
    MessageBox MB_OK "Hello"
FunctionEnd

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (statement
      (command
        name: (identifier)
        argument: (identifier)
        argument: (string
          (string_content))))))

================================================================================
Section with name
================================================================================

Section "Install Files" SEC_IDX
    SetOutPath $INSTDIR
    File "myapp.exe"
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    parameter: (string
      (string_content))
    parameter: (identifier)
    (statement
      (command
        name: (identifier)
        argument: (variable)))
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content))))))

================================================================================
Section with identifier name
================================================================================

Section Install
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    parameter: (identifier)))

================================================================================
Section with flag
================================================================================

Section /o "Optional" SEC_OPT
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    parameter: (flag)
    parameter: (string
      (string_content))
    parameter: (identifier)))

================================================================================
Bare section
================================================================================

Section
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition))

================================================================================
Section group
================================================================================

SectionGroup "My Group"
    Section "First"
    SectionEnd
    Section "Second"
    SectionEnd
SectionGroupEnd

--------------------------------------------------------------------------------

(source_file
  (section_group
    parameter: (string
      (string_content))
    (section_definition
      parameter: (string
        (string_content)))
    (section_definition
      parameter: (string
        (string_content)))))

================================================================================
Section group with identifier name
================================================================================

SectionGroup MyGroup
    Section "Child"
    SectionEnd
SectionGroupEnd

--------------------------------------------------------------------------------

(source_file
  (section_group
    parameter: (identifier)
    (section_definition
      parameter: (string
        (string_content)))))

================================================================================
Section group with flag
================================================================================

SectionGroup /e "Expanded"
    Section "Child"
    SectionEnd
SectionGroupEnd

--------------------------------------------------------------------------------

(source_file
  (section_group
    parameter: (flag)
    parameter: (string
      (string_content))
    (section_definition
      parameter: (string
        (string_content)))))

================================================================================
Macro definition
================================================================================

!macro MyMacro param1 param2
    DetailPrint "${param1}"
    File "${param2}"
!macroend

--------------------------------------------------------------------------------

(source_file
  (macro_definition
    name: (identifier)
    parameter: (identifier)
    parameter: (identifier)
    (statement
      (command
        name: (identifier)
        argument: (string
          (define_reference))))
    (statement
      (command
        name: (identifier)
        argument: (string
          (define_reference))))))

================================================================================
Nested macro definition
================================================================================

Section "Install"
    !macro WriteRegHelper key value
        WriteRegStr SHCTX "${key}" "${value}"
    !macroend
    !insertmacro WriteRegHelper "Path" "$INSTDIR"
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    parameter: (string
      (string_content))
    (macro_definition
      name: (identifier)
      parameter: (identifier)
      parameter: (identifier)
      (statement
        (command
          name: (identifier)
          argument: (identifier)
          argument: (string
            (define_reference))
          argument: (string
            (define_reference)))))
    (statement
      (preproc_directive
        directive: (preproc_keyword)
        argument: (identifier)
        argument: (string
          (string_content))
        argument: (string
          (variable))))))

================================================================================
Preprocessor conditional
================================================================================

!ifdef DEBUG
    DetailPrint "Debug mode"
!else
    SetDetailsPrint none
!endif

--------------------------------------------------------------------------------

(source_file
  (preproc_conditional
    keyword: (preproc_keyword)
    (identifier)
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content))))
    (preproc_else
      (statement
        (command
          name: (identifier)
          argument: (identifier))))))

================================================================================
Preprocessor else conditions
================================================================================

!if 1 == 0
    Nop
!else if 1 == 1
    Nop
!else ifdef DEBUG
    Nop
!else ifndef DEBUG
    Nop
!else ifmacrodef MyMacro
    Nop
!else ifmacrondef MyMacro
    Nop
!endif

--------------------------------------------------------------------------------

(source_file
  (preproc_conditional
    keyword: (preproc_keyword)
    (number)
    (comparison_operator)
    (comparison_operator)
    (number)
    (statement
      (command
        name: (identifier)))
    (preproc_else
      modifier: (identifier)
      (number)
      (comparison_operator)
      (comparison_operator)
      (number)
      (statement
        (command
          name: (identifier))))
    (preproc_else
      modifier: (identifier)
      (identifier)
      (statement
        (command
          name: (identifier))))
    (preproc_else
      modifier: (identifier)
      (identifier)
      (statement
        (command
          name: (identifier))))
    (preproc_else
      modifier: (identifier)
      (identifier)
      (statement
        (command
          name: (identifier))))
    (preproc_else
      modifier: (identifier)
      (identifier)
      (statement
        (command
          name: (identifier))))))

================================================================================
Plugin call
================================================================================

Section
    nsDialogs::Create 1018
    Pop $0
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    (statement
      (plugin_call
        plugin: (identifier)
        function: (identifier)
        argument: (number)))
    (statement
      (command
        name: (identifier)
        argument: (variable)))))

================================================================================
Plugin call with arguments
================================================================================

nsDialogs::Show

--------------------------------------------------------------------------------

(source_file
  (statement
    (plugin_call
      plugin: (identifier)
      function: (identifier))))

================================================================================
Labels
================================================================================

Function myFunc
    Goto done
    DetailPrint "hello"
done:
FunctionEnd

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (statement
      (command
        name: (identifier)
        argument: (identifier)))
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content))))
    (label
      name: (identifier))))

================================================================================
Global label
================================================================================

Section
    Call :.global_label
    Return
.global_label:
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    (statement
      (command
        name: (identifier)
        argument: (label_reference)))
    (statement
      (command
        name: (identifier)))
    (label
      name: (identifier))))

================================================================================
Preprocessor directives
================================================================================

!include "MUI2.nsh"
!define PRODUCT_NAME "MyApp"
!insertmacro MUI_PAGE_WELCOME

--------------------------------------------------------------------------------

(source_file
  (statement
    (preproc_directive
      directive: (preproc_keyword)
      argument: (string
        (string_content))))
  (statement
    (preproc_directive
      directive: (preproc_keyword)
      argument: (identifier)
      argument: (string
        (string_content))))
  (statement
    (preproc_directive
      directive: (preproc_keyword)
      argument: (identifier))))

================================================================================
Define with flag
================================================================================

!define /date BUILD_DATE "%Y-%m-%d"

--------------------------------------------------------------------------------

(source_file
  (statement
    (preproc_directive
      directive: (preproc_keyword)
      argument: (flag)
      argument: (identifier)
      argument: (string
        (string_content)))))

================================================================================
Variable declaration
================================================================================

Var myVar
Var /GLOBAL sharedVar

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable_declaration
      name: (identifier)))
  (statement
    (variable_declaration
      (flag)
      name: (identifier))))

================================================================================
Comments
================================================================================

; This is a semicolon comment
# This is a hash comment
/* This is a
   block comment */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (block_comment))

================================================================================
String interpolation
================================================================================

Section
    DetailPrint "Installing to $INSTDIR"
    DetailPrint "Version: ${VERSION}"
    DetailPrint "Path: $\n$OUTDIR"
SectionEnd

--------------------------------------------------------------------------------

(source_file
  (section_definition
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content)
          (variable))))
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content)
          (define_reference))))
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content)
          (escape_sequence)
          (variable))))))

================================================================================
PageEx block
================================================================================

PageEx license
    Caption "License Agreement"
    LicenseData "license.txt"
PageExEnd

--------------------------------------------------------------------------------

(source_file
  (page_ex_block
    type: (identifier)
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content))))
    (statement
      (command
        name: (identifier)
        argument: (string
          (string_content))))))
